src/test/ui/parser/macro-mismatched-delim-brace-paren.rs
// compile-flags: -Z parse-only

fn main() {
    foo! {
        bar, "baz", 1, 2.0
    ) //~ ERROR incorrect close delimiter
}
